--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
     <h1>Players who have joined the game:</h1>
     <div id="player-log">
       <?php include 'player_names.txt'; ?>
+      <style>
+  .background-image {
+    background: url('download.jpg'); /* replace with your image URL */
+    background-size: cover;
+    height: 100vh; /* set the height to 100% of the viewport */
+    width: 100%; /* set the width to 100% */
+  }
+</style>
+
+<div class="background-image"></div>
+
   </body>
 </html>
