--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <title>Player Join Log</title>
   </head>
   <body>
-    <h1>Players who have joined the game:</h1>
-    <div id="player-log">
-      <?php include 'player_names.txt'; ?>
+    <h1>Revial Admin Site:</h1>
       <style>
   .background-image {
     background: url('download.jpg'); /* replace with your image URL */
