--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
-<!-- index.html -->
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Player Join Log</title>
-  </head>
-  <body>
-          <style>
-  .background-image {
-    background: url('download.jpg'); /* replace with your image URL */
-    background-size: cover;
-    height: 100vh; /* set the height to 100% of the viewport */
-    width: 100%; /* set the width to 100% */
-  }
-</style>
-
-<div class="background-image"></div>
-
-  </body>
+<head>
+	<title>Revival Site</title>
+	<style>
+		body {
+			background-image: url('download.jpg'); /* replace with your background image file */
+			background-size: cover;
+			background-position: center;
+			height: 100vh;
+			margin: 0;
+		}
+		
+		.header-text {
+			color: #fff; /* white text color */
+			font-size: 48px;
+			font-weight: bold;
+			text-align: center;
+			padding-top: 20vh;
+		}
+	</style>
+</head>
+<body>
+	<h1 class="header-text">Revival Site</h1>
+</body>
 </html>
