--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Revival Site</title>
 	<style>
 		body {
-			background-image: url('download.jpg'); /* replace with your background image file */
+			background-image: url('background.jpg'); /* replace with your background image file */
 			background-size: cover;
 			background-position: center;
 			height: 100vh;
@@ -16,7 +16,12 @@
 			font-size: 48px;
 			font-weight: bold;
 			text-align: center;
-			padding-top: 20vh;
+			padding: 20px;
+			background-color: #000; /* black background */
+			width: 100%;
+			top: 0;
+			left: 0;
+			position: absolute;
 		}
 	</style>
 </head>
