--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<title>Revival Site</title>
 	<style>
 		body {
-			background-image: url('background.jpg'); /* replace with your background image file */
+			background-image: url('download.jpg'); /* replace with your background image file */
 			background-size: cover;
 			background-position: center;
-			height: 100vh;
+			height: 50vh;
 			margin: 0;
 		}
 		
@@ -26,6 +26,6 @@
 	</style>
 </head>
 <body>
-	<h1 class="header-text">Revival Site</h1>
+	<h1 class="header-text">Revival Admin Site</h1>
 </body>
 </html>
