--- a/index.html
+++ b/index.html
@@ -25,6 +25,57 @@
 		}
 	</style>
 <script src="https://cdn.jsdelivr.net/npm/ws@7.4.3/dist/ws.min.js"></script>
-	<p id="player-count">Players online: <span></span></p>
+	<!DOCTYPE html>
+<html>
+<head>
+  <title>Discord Bot Messages</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+    .message {
+      padding: 10px;
+      border-bottom: 1px solid #ccc;
+    }
+  </style>
+</head>
+<body>
+  <h1>Discord Bot Messages</h1>
+  <div id="messages"></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/axios@0.21.1/dist/axios.min.js"></script>
+  <script>
+    const webhookUrl = 'YOUR_DISCORD_WEBHOOK_URL';
+    const messagesContainer = document.getElementById('messages');
+
+    axios.post(webhookUrl, {
+      content: 'Hello from my website!'
+    });
+
+    setInterval(() => {
+      axios.get(webhookUrl)
+        .then(response => {
+          const messages = response.data.messages;
+          messagesContainer.innerHTML = '';
+
+          messages.forEach((message, index) => {
+            const messageElement = document.createElement('div');
+            messageElement.className = 'message';
+            messageElement.textContent = message.content;
+
+            if (index > 0) {
+              messageElement.style.marginTop = '10px';
+            }
+
+            messagesContainer.appendChild(messageElement);
+          });
+        })
+        .catch(error => {
+          console.error(error);
+        });
+    }, 5000); // update every 5 seconds
+  </script>
+</body>
+</html>
 </head>
 </html>
