--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/axios@0.21.1/dist/axios.min.js"></script>
   <script>
-    const webhookUrl = 'YOUR_DISCORD_WEBHOOK_URL';
+    const webhookUrl = 'https://discordapp.com/api/webhooks/1239972364511477760/ZUUrkAsBGH760e3_JXNhG_Udo9MAGHyZBpi4Idfw8z9Pr7s5oEx-ncerCnhzDvJ0lfry';
     const messagesContainer = document.getElementById('messages');
 
     axios.post(webhookUrl, {
